--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <div class="alert alert-success" role="alert">
+      <%= flash[:notice] %>
+    </div>
+    <div class="alert alert-danger" role="alert">
+      <%= flash[:alert] %> 
+    </div>
     <%= yield %>
   </body>
 </html>
