--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Registrations#new</h1>
-<p>Find me in app/views/registrations/new.html.erb</p>
+<div class="card">
+  
+  <div class="card-body container">
+    <%= form_for @user, url: sign_up_path do |f|%>
+      <div class="mb-3">
+       <%= f.label :username, class: 'form-label' %>
+       <%= f.text_field :username , class: 'form-control'%>
+      </div>
+      <div class="mb-3">
+       <%= f.label :full_name, class: 'form-label' %>
+       <%= f.text_field :full_name , class: 'form-control'%>
+      </div>
+      <%= f.submit class: 'btn btn-success' %>
+    <% end %>
+  </div>
+</div>
