refactor homepage and users views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,17 @@
   </head>
 
   <body>
+    <% if flash[:notice] or flash[:alert]%>
     <div class="alert alert-success" role="alert">
       <%= flash[:notice] %>
     </div>
     <div class="alert alert-danger" role="alert">
       <%= flash[:alert] %> 
     </div>
-    <%= yield %>
+    <% end %>
+    <div class="container">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
